[gd_scene load_steps=6 format=3 uid="uid://dqxkyvgtpdc7s"]

[ext_resource type="Script" uid="uid://db382hbnp88l0" path="res://scripts/shop_pruduct.gd" id="2_injbc"]
[ext_resource type="Texture2D" uid="uid://dyy13j4oujxvf" path="res://assets/coin/coin.png" id="3_alaki"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0xgtx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y4cx2"]
bg_color = Color(0.478901, 0.635278, 0.633393, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nsr1t"]
bg_color = Color(0.654605, 0.616148, 0, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25

[node name="shop_pruduct" type="Control" groups=["saveshop"]]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_top = 40.0
offset_right = 384.0
offset_bottom = 104.0
script = ExtResource("2_injbc")

[node name="buy" type="Button" parent="."]
layout_mode = 0
offset_top = -40.0
offset_right = 384.0
offset_bottom = 64.0
theme_override_colors/font_hover_pressed_color = Color(1, 0.882353, 0.313726, 1)
theme_override_colors/font_hover_color = Color(1, 0.881883, 0.311788, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.866667, 0.690196, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0.882353, 0.313726, 1)
theme_override_colors/font_pressed_color = Color(1, 0.882353, 0.313726, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_0xgtx")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_y4cx2")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_y4cx2")
theme_override_styles/hover = SubResource("StyleBoxFlat_y4cx2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_y4cx2")
theme_override_styles/normal = SubResource("StyleBoxFlat_y4cx2")

[node name="powerup" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="coin" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 320.0
offset_right = 384.0
offset_bottom = 64.0
texture = ExtResource("3_alaki")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_top = -40.0
offset_right = 384.0
theme_override_colors/font_color = Color(0.866667, 0.690196, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_nsr1t")
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 3
ellipsis_char = "+"

[connection signal="focus_entered" from="buy" to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="buy" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="buy" to="." method="_on_buy_pressed"]
